syntax = "proto3";

package silenteight.datasource.api.date.v1;

import "google/api/annotations.proto";

option java_package = "com.silenteight.datasource.api.date.v1";
option java_outer_classname = "DateProto";
option java_multiple_files = true;

service DateInputService {
  rpc BatchGetMatchDateInputs (BatchGetMatchDateInputsRequest) returns (stream BatchGetMatchDateInputsResponse) {
    option (google.api.http) = {
      post: "/agent-inputs/date/versions/v1/matches:batchGet"
      body: "*"
    };
  }
}

message BatchGetMatchDateInputsRequest {
  // The list of matches data is requested for, in form of `alerts/<Alert ID>/matches/<Match ID>`.
  repeated string matches = 1;
  // The list of features the input data for each match is requested, in form of `features/<Feature ID>`.
  repeated string features = 2;
}

message BatchGetMatchDateInputsResponse {
  repeated DateInput date_inputs = 1;
}

message DateInput {
  string match = 1;
  repeated DateFeatureInput date_feature_inputs = 2;
}

message DateFeatureInput {
  string feature = 1;
  repeated string alerted_party_dates = 2;
  repeated string watchlist_dates = 3;

  EntityType alerted_party_type = 4;
  SeverityMode mode = 5;

  enum EntityType {
    ENTITY_TYPE_UNSPECIFIED = 0;
    INDIVIDUAL = 1;
    ORGANIZATION = 2;
  }

  enum SeverityMode {
    NORMAL = 0;
    STRICT = 1;
  }
}
